[gd_scene load_steps=7 format=2]

[ext_resource path="res://Building.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Nuke.tscn" type="PackedScene" id=3]
[ext_resource path="res://AntiNuke.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bunker.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Nuke = ExtResource( 3 )
AntiNuke = ExtResource( 4 )

[node name="Buildings" type="Node" parent="."]

[node name="Building2" parent="Buildings" instance=ExtResource( 1 )]
position = Vector2( 46.874, 571 )
scale = Vector2( 0.2, 0.2 )
gravity = 0.0

[node name="Building4" parent="Buildings" instance=ExtResource( 1 )]
position = Vector2( 174.874, 571 )
scale = Vector2( 0.2, 0.2 )
gravity = 0.0

[node name="Building5" parent="Buildings" instance=ExtResource( 1 )]
position = Vector2( 302.874, 571 )
scale = Vector2( 0.2, 0.2 )
gravity = 0.0

[node name="Building6" parent="Buildings" instance=ExtResource( 1 )]
position = Vector2( 720, 568 )
scale = Vector2( 0.2, 0.2 )
gravity = 0.0

[node name="Building3" parent="Buildings" instance=ExtResource( 1 )]
position = Vector2( 848, 568 )
scale = Vector2( 0.2, 0.2 )
gravity = 0.0

[node name="Building" parent="Buildings" instance=ExtResource( 1 )]
position = Vector2( 976, 568 )
scale = Vector2( 0.2, 0.2 )
gravity = 0.0

[node name="NukeSpawnTimerr" type="Timer" parent="."]
autostart = true

[node name="NukePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="NukeSpawnLocation" type="PathFollow2D" parent="NukePath"]

[node name="Bunker" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 569 )
[connection signal="timeout" from="NukeSpawnTimerr" to="." method="_on_NukeSpawner_timeout"]
